force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Location_External_ID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Location_External_ID__c</fullName>
    <description>Enter &quot;vlocation&quot; for all typical installations.</description>
    <inlineHelpText>Enter &quot;vlocation&quot; for all typical installations.</inlineHelpText>
    <label>Location ExternalID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>