force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Max_Availability_Result_Size__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Max_Availability_Result_Size__c</fullName>
    <defaultValue>4500000</defaultValue>
    <description>Enter &quot;4,500,000&quot; for all typical installations.</description>
    <inlineHelpText>Enter &quot;4,500,000&quot; for all typical installations.</inlineHelpText>
    <label>Max Availability Result Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>