force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__MeetingStatus_Custom_CSS__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__MeetingStatus_Custom_CSS__c</fullName>
    <description>For advanced customization, enter the name of a static resource that is used as an additional style sheet for the Meeting Status page.  WARNING: only for advanced customization by subscribers with HTML/CSS skills.</description>
    <inlineHelpText>For advanced customization, enter the name of a static resource that is used as an additional style sheet for the Meeting Status page.  WARNING: only for advanced customization by subscribers with HTML/CSS skills.</inlineHelpText>
    <label>Custom CSS MeetingStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>