force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Mute_Triggers__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Mute_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable trigger processing on TimeTrade objects.  For typical installations, this should be left unchecked.</description>
    <inlineHelpText>Check this box to disable trigger processing on TimeTrade objects.  For typical installations, this should be left unchecked.</inlineHelpText>
    <label>Mute Triggers</label>
    <type>Checkbox</type>
</CustomField>