force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Namespace_Prefix__c</fullName>
    <description>Enter &quot;TimeTrade_SF1__&quot; for all typical installations.</description>
    <inlineHelpText>Enter &quot;TimeTrade_SF1__&quot; for all typical installations.</inlineHelpText>
    <label>Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>