force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Org_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Org_Name__c</fullName>
    <description>Enter the Organization Name value you have specified on Company Information page in Setup.</description>
    <inlineHelpText>Enter the Organization Name value you have specified on Company Information page in Setup.</inlineHelpText>
    <label>Org Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>