force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Program_External_ID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Program_External_ID__c</fullName>
    <description>nter &quot;li&quot; all typical installations.  Specifies the day length for all availability types except Custom.</description>
    <inlineHelpText>Enter &quot;li&quot; all typical installations.  Specifies the day length for all availability types except Custom.</inlineHelpText>
    <label>Program ExternalID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>