force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Require_Phone_Number_on_CTS__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Require_Phone_Number_on_CTS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to require entry of a value in the Phone Number on the Click-to-Schedule page.  This option is ignored when the phone Number is visible on the page.</description>
    <inlineHelpText>Check this box to require entry of a value in the Phone Number on the Click-to-Schedule page.  This option is ignored when the phone Number is visible on the page.</inlineHelpText>
    <label>Require Phone Number on CTS</label>
    <type>Checkbox</type>
</CustomField>