force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Salesforce_Calendar_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Salesforce_Calendar_Last_Sync_Date__c</fullName>
    <description>Do not change this value.  When incremental batch syncing is enabled, this will control the job to sync recently-added Events.</description>
    <inlineHelpText>Do not change this value.  When incremental batch syncing is enabled, this will control the job to sync recently-added Events.</inlineHelpText>
    <label>Salesforce Calendar Last Sync Date</label>
    <type>DateTime</type>
</CustomField>