force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Search_External_Attendee_from__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Search_External_Attendee_from__c</fullName>
    <description>Enter a comma-delimited list of one or more of &quot;Lead&quot;, &quot;Contact&quot;, and/or &quot;Person Account&quot; to search existing records for external attendees. Leave blank to disable searching.</description>
    <inlineHelpText>Enter a comma-delimited list of one or more of &quot;Lead&quot;, &quot;Contact&quot;, and/or &quot;Person Account&quot; to search existing records for external attendees. Leave blank to disable searching.</inlineHelpText>
    <label>External Attendee Search From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>