force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__SiteTemplate_Header_Color__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__SiteTemplate_Header_Color__c</fullName>
    <description>Enter hex color code with #, such as #FFAAAA, to set the background on externally-facing TimeTrade pages.</description>
    <inlineHelpText>Enter hex color code with #, such as #FFAAAA, to set the background on externally-facing TimeTrade pages.</inlineHelpText>
    <label>SiteTemplate Header Color</label>
    <length>12</length>
    <type>Text</type>
</CustomField>