force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Suppress_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Suppress_Email_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to suppress email addresses for internal attendees on the Click-to-Schedule page and all TimeTrade email.  Leave unchecked if you wish email addresses to be displayed.</description>
    <inlineHelpText>Check this box to suppress email addresses for internal attendees on the Click-to-Schedule page and all TimeTrade email.  Leave unchecked if you wish email addresses to be displayed.</inlineHelpText>
    <label>Hide Internal Attendee Email Addresses</label>
    <type>Checkbox</type>
</CustomField>