force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Suppress_Internal_Attendee_Title__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Suppress_Internal_Attendee_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you do not want titles displayed for internal attendees on the Click-to-Schedule and Meeting Status pages.</description>
    <inlineHelpText>Check this box if you do not want titles displayed for internal attendees on the Click-to-Schedule and Meeting Status pages.</inlineHelpText>
    <label>Suppress Internal Attendee Title</label>
    <type>Checkbox</type>
</CustomField>