force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Template_Resource_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Template_Resource_ExternalID__c</fullName>
    <description>Enter &quot;resourcetemplate&quot; for all typical installations.</description>
    <inlineHelpText>Enter &quot;resourcetemplate&quot; for all typical installations.</inlineHelpText>
    <label>Template Resource ExternalID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>