force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__User_Type_Search_Filter__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__User_Type_Search_Filter__c</fullName>
    <description>Optionally enter a comma-delimited list of values to filter User by UserType on Create Invitation search.  &quot;Standard&quot; is the most common value. Valid Values – Standard, PowerPartner, PowerCustomerSuccess, CustomerSuccess, Guest, CspLitePortal, CsnOnly.</description>
    <inlineHelpText>Optionally enter a comma-delimited list of values to filter User by UserType on Create Invitation search.  &quot;Standard&quot; is the most common value. Valid Values – Standard, PowerPartner, PowerCustomerSuccess, CustomerSuccess, Guest, CspLitePortal, CsnOnly.</inlineHelpText>
    <label>User Type Search Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>