force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__WebEx_Additional_Numbers_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__WebEx_Additional_Numbers_URL__c</fullName>
    <description>Enter the Webex URL that will display additional Webex dial-in numbers.</description>
    <inlineHelpText>Enter the Webex URL that will display additional Webex dial-in numbers.</inlineHelpText>
    <label>WebEx Additional Numbers URL</label>
    <type>Url</type>
</CustomField>