force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Webex_Admin_Password__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Webex_Admin_Password__c</fullName>
    <description>When a value is specified in Webex Admin Username, enter the corresponding password for that user.</description>
    <inlineHelpText>When a value is specified in Webex Admin Username, enter the corresponding password for that user.</inlineHelpText>
    <label>Webex Admin Password</label>
    <length>64</length>
    <type>Text</type>
</CustomField>