force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Webex_Admin_Username__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Webex_Admin_Username__c</fullName>
    <description>If a single Webex admin user will be used to schedule Webex meetings on behalf of all users, enter the name of this Webex user. The corresponding Webex Admin Password field must also be set.  Leave blank when all Webex users have username/password access.</description>
    <inlineHelpText>If a single Webex admin user will be used to schedule Webex meetings on behalf of all users, enter the name of this Webex user. The corresponding Webex Admin Password field must also be set.  Leave blank when all Webex users have username/password access.</inlineHelpText>
    <label>Webex Admin Username</label>
    <length>65</length>
    <type>Text</type>
</CustomField>