force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Webex_Override_Domain__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Webex_Override_Domain__c</fullName>
    <description>When using a custom domain with Webex, enter the root URL for your Webex instance.</description>
    <inlineHelpText>When using a custom domain with Webex, enter the root URL for your Webex instance.</inlineHelpText>
    <label>Webex Override Domain</label>
    <length>80</length>
    <type>Text</type>
</CustomField>