force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Webex_password_min_length__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Webex_password_min_length__c</fullName>
    <description>Minimum number of characters for generated Webex passwords</description>
    <inlineHelpText>Please specify the minimum number of characters for generated Webex passwords. Webex supports up to 16 characters. Do not enter a value greater than 16.</inlineHelpText>
    <label>Webex password min length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>