force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Webex_password_min_numeric__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Webex_password_min_numeric__c</fullName>
    <description>Minimum number of numeric characters for generated Webex passwords</description>
    <inlineHelpText>Please specify the minimum number of numeric characters for generated Webex passwords. Make sure the total number of alpha, numeric, and special characters does not exceed 16.</inlineHelpText>
    <label>Webex password min number of numeric</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>