force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__WebEx_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__WebEx_Site_Name__c</fullName>
    <description>When using a custom domain with Webex, enter the root URL for your Webex instance.</description>
    <inlineHelpText>When using a custom domain with Webex, enter the root URL for your Webex instance.</inlineHelpText>
    <label>WebEx Site Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>