force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Zoom_Additional_Numbers_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_Additional_Numbers_URL__c</fullName>
    <description>Enter the Zoom URL that will display additional Zoom dial-in numbers.</description>
    <inlineHelpText>Enter the Zoom URL that will display additional Zoom dial-in numbers.</inlineHelpText>
    <label>Zoom Additional Numbers URL</label>
    <type>Url</type>
</CustomField>