force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Zoom_API_Secret__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_API_Secret__c</fullName>
    <description>Enter your Zoom API Secret. See jZoom instructions in the TimeTrade Scheduler Installation documentation and https://marketplace.zoom.us/ for details.</description>
    <inlineHelpText>Enter your Zoom API Secret. See jZoom instructions in the TimeTrade Scheduler Installation documentation and https://marketplace.zoom.us/ for details.</inlineHelpText>
    <label>Zoom API Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>