force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Zoom_Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_Callback_URL__c</fullName>
    <description>Enter https://sfdomain/apex/Timetrade_SF1__AuthenticateZoomCredentials where &quot;sfdomain&quot; is the domain of your Salesforce instance. See join.me instructions in the TimeTrade Scheduler Installation documentation for more information.</description>
    <inlineHelpText>Enter https://sfdomain/apex/Timetrade_SF1__AuthenticateZoomCredentials where &quot;sfdomain&quot; is the domain of your Salesforce instance. See Zoom instructions in the TimeTrade Scheduler Installation documentation for more information.</inlineHelpText>
    <label>Zoom Callback URL</label>
    <type>Url</type>
</CustomField>