force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Zoom_DialIn_Number__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_DialIn_Number__c</fullName>
    <description>Enter the dial-in number for your Zoom account.</description>
    <inlineHelpText>Enter the dial-in number for your Zoom account.</inlineHelpText>
    <label>Zoom DialIn Number</label>
    <type>Phone</type>
</CustomField>